feat: complete boilerplate for http server

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.dll
 *.so
 *.dylib
+rss-go
+bin/
 
 # Test binary, built with `go test -c`
 *.test
@@ -15,7 +17,13 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
+
+#  curl tests
+curl-tests
+
+# Local environment stuff
+.env
